--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version"     : "1.0.0-alpha",
+    "version"     : "1.0.1",
     "name"        : "hoopower/value",
     "type"        : "project",
     "description" : "PHP Value Cache",
